# DoteWM

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  compile_commands.json
blog/: main.md
src/: CMakeLists.txt  windowmanager.proto
src/minimal/: CMakeLists.txt  app_browser_minimal.cc  app_renderer_minimal.cc  client_minimal.cc  client_minimal.h  mime.h  resource_util_win_impl.cc  scheme_handler.cc  scheme_handler.h  scheme_strings.h
src/minimal/win/: resource.rc
src/protobuf/: windowmanager.grpc.pb.cc  windowmanager.grpc.pb.h  windowmanager.pb.cc  windowmanager.pb.h
src/shared/: CMakeLists.txt  browser_util.cc  client_manager.cc  client_util.cc  resource_util.cc  resource_util_posix.cc  resource_util_win.cc
src/window_manager/: CMakeLists.txt  README.md  base64.cpp  lodepng.cpp  lodepng.h  main.cc  main.hpp
